<resources>
    <string name="app_name">Kids Education</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="an_easy_way_to_learn">An easy way to \n learn</string>
    <string name="next">Next</string>
    <string name="reading">Reading</string>
    <string name="numbers">Numbers</string>
    <string name="all_about_number">All about number</string>
    <string name="level">Level</string>
    <string name="giraffe">GIRAFFE</string>
    <string name="hippo">HIPPO</string>
    <string name="what_animal_is_this">What animal is this?</string>
    <string name="what_is_this_figure">What is this figure?</string>

    <string name="elephant">ELEPHANT</string>
    <string name="tiger">TIGER</string>
    <string name="lion">LION</string>
    <string name="pig">PIG</string>
    <string name="zebra">ZEBRA</string>
    <string name="bear">BEAR</string>
    <string name="monkey">MONKEY</string>
    <string name="panda">PANDA</string>
    <string name="crocodile">CROCODILE</string>
    <string name="frog">FROG</string>

    <string name="excellent">Excellent!</string>
    <string name="you_ve_got_a_perfect_score">You’ve got a perfect score!</string>
    <string name="one">One</string>
    <string name="nine">Nine</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
</resources>