<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="14dp"
    tools:context=".presentation.NumberFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:background="@drawable/bg_fon_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/candy_beans"
                android:text="@string/level"
                android:textColor="@color/color6"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_this_figure"
            android:textSize="16sp"
            android:fontFamily="@font/dm_sans"
            android:textColor="#373737"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fon_ellipse"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_fon_ellipse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_question"
            app:layout_constraintVertical_bias="0.3">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/icon_number"
            android:layout_width="123dp"
            android:layout_height="123dp"
            tools:src="@drawable/ic_1"
            app:layout_constraintBottom_toBottomOf="@+id/fon_ellipse"
            app:layout_constraintEnd_toEndOf="@+id/fon_ellipse"
            app:layout_constraintStart_toStartOf="@+id/fon_ellipse"
            app:layout_constraintTop_toTopOf="@+id/fon_ellipse" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bt_next"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_bt2"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/white"
            android:fontFamily="@font/mulish"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bt_answer1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintVertical_bias="0.2"
        android:background="@drawable/bg_item_answer2"
        app:layout_constraintBottom_toTopOf="@+id/bt_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bg_bt_number1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/tv_answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Five"
                android:textColor="@color/color3"
                android:textSize="18sp"
                android:fontFamily="@font/candy_beans"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bt_answer2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bg_item_answer3"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintBottom_toTopOf="@+id/bt_next"
        app:layout_constraintTop_toBottomOf="@+id/bt_answer1"
        tools:layout_editor_absoluteX="14dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bg_bt_number2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/tv_answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/candy_beans"
                android:textColor="@color/color2"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Five" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>